[package]
name = "course_pull"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.12"
url = "2.3"
log = "0.4"
env_logger = "0.9"
clipboard = "0.5"

serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "mysql",
    "postgres",
    "chrono",
] }
futures = "0.3.31"
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.142"
